add some accelerators

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3043,7 +3043,7 @@ BEGIN
 			MENUITEM "Restore Defaults", ID_DEBUGGER_DEFCOLOR
 		END
         MENUITEM "IDA Font",                    ID_DEBUGGER_IDA_FONT, CHECKED
-        MENUITEM "ROM Offsets",                 ID_DEBUGGER_SHOW_ROM_OFFSETS, CHECKED
+        MENUITEM "&ROM Offsets\tAlt+A",         ID_DEBUGGER_SHOW_ROM_OFFSETS, CHECKED
 		MENUITEM "Show Trace Info",             ID_DEBUGGER_SHOW_TRACE_INFO, CHECKED
 		POPUP "Code/Data Logger"
 		BEGIN
@@ -3141,6 +3141,8 @@ BEGIN
 	VK_F5,          IDC_DEBUGGER_RUN,        VIRTKEY
 	"A",            IDC_DEBUGGER_VAL_PCSEEK, VIRTKEY, CONTROL
 	"P",            IDC_DEBUGGER_SEEK_PC,    VIRTKEY, CONTROL
+    "A",            ID_DEBUGGER_SHOW_ROM_OFFSETS, VIRTKEY, ALT
+	"D",            ID_DEBUGGER_UNLOGGED_AS_DATA, VIRTKEY, CONTROL
 END
 
 
