add option to toggle PC following

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3046,6 +3046,7 @@ BEGIN
 	    MENUITEM SEPARATOR
         MENUITEM "&ROM Offsets\tAlt+A",         ID_DEBUGGER_SHOW_ROM_OFFSETS, CHECKED
 		MENUITEM "Show Trace Info",             ID_DEBUGGER_SHOW_TRACE_INFO, CHECKED
+		MENUITEM "Follow Program Counter\tAlt+F",      ID_DEBUGGER_FOLLOW_PC, CHECKED
 		MENUITEM SEPARATOR
 		POPUP "Code/Data Logger"
 		BEGIN
@@ -3144,6 +3145,7 @@ BEGIN
 	"P",            IDC_DEBUGGER_SEEK_PC,    VIRTKEY, CONTROL
     "A",            ID_DEBUGGER_SHOW_ROM_OFFSETS, VIRTKEY, ALT
 	"D",            ID_DEBUGGER_UNLOGGED_AS_DATA, VIRTKEY, CONTROL
+	"F",            ID_DEBUGGER_FOLLOW_PC,   VIRTKEY, ALT
 END
 
 
