--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3050,7 +3050,7 @@ BEGIN
 		MENUITEM SEPARATOR
 		POPUP "Code/Data Logger"
 		BEGIN
-			MENUITEM "Show Unlogged &Bytes as Data\tCtrl+D", ID_DEBUGGER_UNLOGGED_AS_DATA, CHECKED
+			MENUITEM "Show Unlogged &Bytes as Data\tAlt+D", ID_DEBUGGER_UNLOGGED_AS_DATA, CHECKED
 			MENUITEM "Break on Unlogged Code", ID_DEBUGGER_BREAK_UNLOGGED_CODE, CHECKED
 			MENUITEM "Break on Unlogged Data", ID_DEBUGGER_BREAK_UNLOGGED_DATA, CHECKED
 		END
@@ -3144,7 +3144,7 @@ BEGIN
 	"A",            IDC_DEBUGGER_VAL_PCSEEK, VIRTKEY, CONTROL
 	"P",            IDC_DEBUGGER_SEEK_PC,    VIRTKEY, CONTROL
     "A",            ID_DEBUGGER_SHOW_ROM_OFFSETS, VIRTKEY, ALT
-	"D",            ID_DEBUGGER_UNLOGGED_AS_DATA, VIRTKEY, CONTROL
+	"D",            ID_DEBUGGER_UNLOGGED_AS_DATA, VIRTKEY, ALT
 	"F",            ID_DEBUGGER_FOLLOW_PC,   VIRTKEY, ALT
 END
 
