rainbow: v2 first commit
- prg banking OK
- chr banking OK
- NT mapping OK
- prg self-flashing in mode 3 OK
- chr self-flashing in mode 3 OK
- scanline IRQ OK
- CPU Cycle IRQ ok
- multiplication OK
- version OK

--- a/vc/vc14_fceux.vcxproj.filters
+++ b/vc/vc14_fceux.vcxproj.filters
@@ -1142,6 +1142,9 @@
     <ClCompile Include="..\src\boards\RNBW\pping.c">
       <Filter>boards</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\boards\rainbow2.cpp">
+      <Filter>boards</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\drivers\common\args.h">
