fix msvc building

--- a/vc/vc14_fceux.vcxproj.filters
+++ b/vc/vc14_fceux.vcxproj.filters
@@ -1120,6 +1120,7 @@
     <ClCompile Include="..\src\boards\354.cpp">
       <Filter>boards</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\debugsymboltable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\drivers\common\args.h">
