Laying out framework for ld65 debug symbol loader feature.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -287,6 +287,7 @@ set(SRC_CORE
   	${CMAKE_CURRENT_SOURCE_DIR}/filter.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/ines.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/input.cpp
+  	${CMAKE_CURRENT_SOURCE_DIR}/ld65dbg.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/movie.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/netplay.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/nsf.cpp
