Moved time stamp functions to its own file. Use new common time stamp functions in Qt GUI timing.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -527,6 +527,7 @@ set(SRC_CORE
   	${CMAKE_CURRENT_SOURCE_DIR}/utils/md5.cpp  
   	${CMAKE_CURRENT_SOURCE_DIR}/utils/memory.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/utils/mutex.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/utils/timeStamp.cpp
 )
 
 
