--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,6 @@ environment:
 
   - job_name: Ubuntu
     appveyor_build_worker_image: Ubuntu2004
-    #appveyor_build_worker_image: Ubuntu1804
 
   - job_name: MacOS
     appveyor_build_worker_image: macos-bigsur
@@ -27,7 +26,7 @@ for:
         - job_name: Windows 32
 
     build_script:
-    - cmd: perl pipelines/build.pl win32
+    - cmd: pipelines/WinAppveyorBuild.bat win32
 
   -
     matrix:
@@ -35,7 +34,7 @@ for:
         - job_name: Windows 64
 
     build_script:
-    - cmd: perl pipelines/build.pl win64
+    - cmd: pipelines/WinAppveyorBuild.bat win64
 
   -
     matrix:
@@ -43,7 +42,7 @@ for:
         - job_name: Win64 Qt
 
     build_script:
-    - cmd: perl pipelines/build.pl win64-QtSDL
+    - cmd: pipelines/WinAppveyorBuild.bat win64-QtSDL
 
   -
     matrix:
