--- a/vc/vc14_fceux.vcxproj
+++ b/vc/vc14_fceux.vcxproj
@@ -505,9 +505,8 @@ xcopy /y /d "$(ProjectDir)\..\src\drivers\win\7z_64.dll" "$(OutDir)"</Command>
     <ClCompile Include="..\src\boards\mmc2and4.cpp" />
     <ClCompile Include="..\src\boards\onebus.cpp" />
     <ClCompile Include="..\src\boards\pec-586.cpp" />
-    <ClCompile Include="..\src\boards\rainbow2.cpp" />
+    <ClCompile Include="..\src\boards\rainbow.cpp" />
     <ClCompile Include="..\src\boards\rainbow_esp.cpp" />
-    <ClCompile Include="..\src\boards\rainbow13.cpp" />
     <ClCompile Include="..\src\boards\RNBW\pping.c" />
     <ClCompile Include="..\src\boards\rt-01.cpp" />
     <ClCompile Include="..\src\boards\sa-9602b.cpp" />
