--- a/vc/vc14_fceux.vcxproj.filters
+++ b/vc/vc14_fceux.vcxproj.filters
@@ -1120,6 +1120,9 @@
     <ClCompile Include="..\src\boards\354.cpp">
       <Filter>boards</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\boards\413.cpp">
+      <Filter>boards</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\debugsymboltable.cpp" />
   </ItemGroup>
   <ItemGroup>
