--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,19 +4,19 @@ environment:
   matrix:
 
   - job_name: Windows 32
-    appveyor_build_worker_image: Visual Studio 2019
+    appveyor_build_worker_image: Visual Studio 2022
 
   - job_name: Windows 64
-    appveyor_build_worker_image: Visual Studio 2019
+    appveyor_build_worker_image: Visual Studio 2022
 
   - job_name: Win64 Qt
-    appveyor_build_worker_image: Visual Studio 2019
+    appveyor_build_worker_image: Visual Studio 2022
 
   - job_name: Ubuntu
-    appveyor_build_worker_image: Ubuntu2004
+    appveyor_build_worker_image: Ubuntu2204
 
   - job_name: MacOS
-    appveyor_build_worker_image: macos-ventura
+    appveyor_build_worker_image: macos-sonoma
 
 for:
 
