Fix cmake Qt findpackage error messaging to make it more obvious what the error is.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,10 @@ if (NOT DEFINED QT)
 			set( QT 5 )
 		endif()
 	endif()
+	if (NOT DEFINED QT)
+		message( STATUS "Qt findpackage failed. Qt Version could not be determined.")
+		set( QT 5 )
+	endif()
 endif()
 
 if ( ${FCEU_PROFILER_ENABLE} )
