--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,13 +10,13 @@ environment:
     appveyor_build_worker_image: Visual Studio 2019
 
   - job_name: Win64 Qt
-    appveyor_build_worker_image: Visual Studio 2019
+    appveyor_build_worker_image: Visual Studio 2022
 
   - job_name: Ubuntu
     appveyor_build_worker_image: Ubuntu2004
 
   - job_name: MacOS
-    appveyor_build_worker_image: macos-ventura
+    appveyor_build_worker_image: macos-sonoma
 
 for:
 
