Cache the vcpkg user app data folder instead. This is more robust.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,7 +63,7 @@ for:
     - sh: perl pipelines/build.pl macOS
 
 cache:
-  - vcpkg/vcpkg_installed -> vcpkg/vcpkg.json
+  - C:\Users\appveyor\AppData\Local\vcpkg -> vcpkg/vcpkg.json
 
 deploy:
 
